<resources>
    <string name="app_name">BaiTap1</string>
    <string name="titleimg">titleimg</string>
    <string name="user_name">User name</string>
    <string name="password">**********</string>
    <string name="login_me">LOGIN ME</string>
    <string name="lost_password">Lost password ?</string>
    <string name="textview">TextView</string>
    <string name="textview2"><b>Email:</b> huydinhvan13.gmail.com</string>
    <string name="textview3"><b>Phone:</b> 0932548177</string>
    <string name="textview4"><b>Mã SV:</b> 2050531200531</string>
    <string name="textview5"><b>Web:</b> github.com/dvanhuy</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="skype">Skype</string>
    <string name="web">Web</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
    <string name="userimg">user</string>
    <string name="profile_name">Profile Name</string>
    <string name="tennguoitao">Đinh Văn Huy</string>
    <string name="_111">111</string>
    <string name="friends">Friends</string>
    <string name="_250">250</string>
    <string name="followers">Followers</string>
    <string name="setting">setting</string>
</resources>